public/css/style.css
/* ... */
*::-webkit-selection {
	background-color: rgba(67, 213, 177, 0.9);
	color: #fff;
}

input[type='checkbox'] {
	left: 1rem;
	position: relative;
	width: 2rem;
}
input[type='checkbox'] + label {
	position: relative;
	left: -1rem;
	pointer-events: none;
	height: calc(1rem + 2px);
	outline: none;
}
input[type='checkbox'] + label::after {
	transition: all 0.2s;
	border-radius: 1rem;
	content: '';
	position: absolute;
	display: 'inline-block';
	width: calc(2rem + 2px);
	left: -0.5rem;
	border: 0;
	box-shadow: 0 0 1px 1px gray inset;
	background-color: #fff;
	height: calc(1rem + 2px);
}
input[type='checkbox'] + label::before {
	transition: all 0.2s;
	border-radius: 1rem;
	content: '';
	z-index: 2;
	top: 1px;
	left: calc(-0.5rem);
	position: absolute;
	display: 'inline-block';
	width: 1rem;
	background-color: #fff;
	border-right: 1px solid gray;
	border-left: 1px solid gray;
	height: 1rem;
}
input[type='checkbox']:checked + label::before {
	left: calc(-0.5rem + 1rem - -1px);
	height: calc(0.975rem - 2px);
	width: calc(0.975rem - 2px);
	top: calc(0.25rem / 2);
	border: 0;
}
input[type='checkbox']:checked + label::after {
	background-color: rgba(67, 213, 177, 1);
	box-shadow: 0 0 1px 1px rgba(67, 213, 177, 1) inset;
	border-color: green;
	box-shadow: none;
}

.button {
	border: 1px solid #808080;
	font-weight: normal;
	display: inline-block;
	border-radius: 0.25rem;
	background-color: #F5F5F5;
	color: #333;
	cursor: pointer;
	height: 1.5rem;
	margin: 0px 0.125rem;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	line-height: 1.5rem;
	box-shadow: 0px -2px #B9B9B9 inset;
	transition: all 0.2s ease 0s;
	padding: 0px 0.5rem;
	height: 1.75rem;
}
	.button:hover {
		background-color: #DEDDDD;
	}

	.btn-green {
		color: #FFF;
		border-color: #3E875C;
		background-color: #25C869;
		box-shadow: 0 -2px #2CA15F inset;
	}
		.btn-green:hover {
			border-color: #3E875C;
			box-shadow: 0 -2px #2CA15F inset;
			background-color: rgb(45, 185, 102);
		}
	.btn-red {
		color: #FFF;
		background-color: #D64541;
		border-color: #AA4B48;
		box-shadow: 0 -2px #AE4541 inset;
	}
		.btn-red:hover {
			box-shadow: 0 -2px #A73A36 inset;
			background-color: #CF3D39;
			border-color: #AA4B48;
		}


html, body {
	width: 100%;
	overflow: hidden;
	height: 100%;
	padding: 0;
	margin: 0;
	font-family: 'Roboto', sans-serif;
}
* {
	box-sizing: border-box;
}

.loading-hidden #loading-cover, .loading-hidden #loading-icon {
	opacity: 0;
	pointer-events: none;
	transiton: all 0.5s;
}
#loading {
	opacity: 1;
	transiton: all 0.5s;
}
#loading-cover {
	width: calc(100% - 15rem);
	height: calc(100% - 4rem);
	top: 0;
	left: 15rem;
	position: fixed;
	z-index: 8;
	background-color: black;
	opacity: 0.5;
}
#loading-icon {
	font-size: 3rem;
	position: absolute;
	left: calc((100% - 7.5rem) / 2 + 7.5rem);
	top: calc((100% - 2rem) / 2 - 2rem);
	color: #fff;
	z-index: 21;
}

#new_playlist-input {
	width: 9.2rem;
	border-radius: 0.2rem;
	border: 1px solid gray;
	margin-bottom: 0.2rem;
	height: 1.35rem;
	padding: 0 0.25rem;
}

#errPage {
	background: url(/img/logoGradient.png);
	background-size: cover;
	filter: saturate(0.5);
	-webkit-filter: saturate(0.5);
	color: #fff;
	overflow: hidden;
	padding: 0 2rem;
	height: 100%;
}
	#errPage pre {
		display: inline-block;
	}
	#errPage a {
		color: #fff;
		font-weight: bold;
	}
	#errPage p {
		font-size: 1.25rem;
		margin: 0.5rem 2rem;
	}

#settings {
	padding: 3rem;
    padding-top: 2rem;
}
	#settings .search-header {
		padding-left: 0rem;
		margin-bottom: 0.5rem;
	}
	.settings-success {
		opacity: 0;
		transition: all 0.3s;
	}

#top_colour_bar {
	width: 100%;
	position: fixed;
	background: url(/img/logoGradient_v2.png);
	background-size: cover;
	top: 0;
	left: 0;
	height: 3px;
	z-index: 9;
}

.context_menu-cover {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 10;
}
	.context_menu-cover-hidden {
		pointer-events: none;
	}
.context_menu {
	width: 10rem;
	overflow-x: hidden;
	background-color: rgb(254, 254, 254);
	color: rgb(36, 36, 36);
	border: 2px solid rgb(177, 177, 177);
	border-radius: 0.2rem;
	position: absolute;
	z-index: 11;
	margin-top: 0.3rem;
	max-height: 20rem;
	overflow-y: auto;
	font-weight: 300;
	font-size: 0.8rem;
	box-shadow: 0px 0px 0.3rem 0.075rem rgba(100, 100, 100, 0.1);
}
	.context_menu-arrow-white {
		display: inline-block;
		position: fixed;
		left: calc(50% - 0.45rem);
		top: -0.45rem;
		width: 0px;
		height: 0px;
		border-left: 0.55rem solid transparent;
		border-right: 0.55rem solid transparent;
		border-bottom: 0.55rem solid rgb(255, 255, 255);
	}
	.context_menu-arrow-gray {
		display: inline-block;
		position: fixed;
		top: -0.65rem;
		width: 0px;
		height: 0px;
		border-left: 0.65rem solid transparent;
		border-right: 0.65rem solid transparent;
		border-bottom: 0.65rem solid #B1B1B1;
		left: calc(50% - 0.6rem);
	}
		 .flip .context_menu-arrow-white, .flip .context_menu-arrow-gray {
			transform: rotate(180deg);
		}
	.context_menu-item {
		border-bottom: 1px solid rgb(155, 155, 155);
		padding: 0.15rem 0.25rem;
	}
		.context_menu-item:hover {
			background-color: rgb(243, 243, 243);
		}
		.context_menu-item:last-child {
			border: 0;
		}
		.context_menu-item img {
			height: 3rem;
			width: 3rem;
		}
		.context_menu-item span {
			font-size: 0.8rem;
		}
	.context_menu-next_level {
		top: 0;
		position: absolute;
		width: calc(100% + 4px);
		background-color: rgb(255, 255, 255);
		min-height: calc(100% + 2px);
		border: 2px solid rgb(155, 155, 155);
		border-radius: 0.25rem;
		left: -2px;
		border-top: 0;
	}
		.context_menu-next_level-back_header {
			margin-bottom: 1.375rem;
		}
			.context_menu-next_level-back_header-icon {
				float: left;
				padding: 0.25rem 0.25rem 0px;
			}
/* ... */

